# TLXAUTO

./: .env.example  .gitignore  .npmrc  README.md  dev.sh  docker-compose.yml  package.json
.githooks/: README.md  post-commit
backend/: .env.example  README.md  app.py  pyproject.toml
caddy/: Caddyfile
docs/: PROJECT_BRIEF.md  postgres_rls.sql
frontend/: .npmrc  index.html  vite.config.ts
frontend/public/: manifest.json  service-worker.js
frontend/public/images/: README.md
frontend/public/images/icons/: README.md
frontend/src/: api.ts  main.ts  style.css
otel/: otel-collector-config.yaml
scripts/: disable-autopush.sh  setup-autopush.sh
tlx-ads/backend/: Dockerfile  audit.py  auth.py  db.py  logging_json.py  main.py  metrics_util.py  models.py  otel.py  rate_limit.py  rate_limit_redis.py  rbac.py  requirements.txt  saas.py  shortener.py  smoke_test.py  templates_util.py  token_utils.py  utm.py
tlx-ads/backend/jobs/: cron_run_due.py  worker_deliveries.py  worker_loop.py
tlx-ads/frontend/: .npmrc  Dockerfile  app.ts  docker-entrypoint.sh  env.js  index.html  package-lock.json  package.json  tsconfig.json
